--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -851,6 +851,9 @@ html {
 @media (min-width: 901px) {
     body.immersive-home {
         padding-left: 92px;
+        overflow: hidden;
+        height: 100vh;
+        width: 100vw;
     }
 
     body.immersive-home .media-header {
